WELD-2694 Introduce jboss logging into extension translator. Replace deprecated Class.newInstance() calls.